// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeAction AccountEnabled is false should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-fUnMCh eCCEjf"
  >
    <button
      class="sc-cwHptR iArmaO sc-hzhJZQ"
      data-testid="connect-btn"
      label="[object Object]"
      style="width: 100%;"
      type="button"
    >
       
      <h3
        class="sc-eldPxv eEspBv"
      >
        Connect Wallet
      </h3>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BridgeAction AccountEnabled is true should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-fUnMCh eCCEjf"
  >
    <button
      class="sc-cwHptR iArmaO sc-hzhJZQ"
      data-testid="bridge-btn"
      label="[object Object]"
      style="width: 100%;"
      type="button"
    >
       
      <h3
        class="sc-eldPxv eEspBv"
      >
        Bridge
      </h3>
    </button>
  </div>
</DocumentFragment>
`;
